testdata/golden/sema/invalid/concurrency/generic_fn_cannot_infer.fmt
@intrinsic
type TestChannel<T> = {
    __opaque: *byte,
};

@intrinsic
fn make_test_channel<T>(capacity: uint) -> own TestChannel<T>;

fn main() {
    // T cannot be inferred from arguments - should error
    let ch = make_test_channel(10);
}
